dups removed, rework semi successful